--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
     gap: 10px;
     padding: 0 calc(calc(100vw - var(--book-container-width)) / 2);
     padding-top: 20px;
-    color: white;
+    color: rgb(233, 212, 212);
     border-width: 0;
 }
 
@@ -65,7 +65,7 @@ html {
     grid-column: 1 / -1;
     background-image: linear-gradient(to top, rgb(29, 14, 14), rgb(149, 98, 98), rgb(202, 164, 164), rgb(240, 248, 255));
     /* background-color: rgb(29, 14, 14); */
-    color: white;
+    color: rgb(233, 212, 212);
     display: flex;
     justify-content: center;
     align-items: flex-end;
